Fix shrinking navbar on mobile

--- a/front/src/Navigation.css
+++ b/front/src/Navigation.css
@@ -8,6 +8,7 @@
   border-radius: 0 0 10px 10px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
   z-index: 10;
+  min-height: 85px;
 }
 
 .menu-icon-svg {
